<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">CamMax360</string>
    <string name="we_dont_post_on_facebook">Don\'t worry, we don\'t post anything on facebook</string>
    <string name="connect_with_facebook">Connect with Facebook</string>
    <string name="connect_with_mobile">Connect with Mobile</string>
    <string name="agree_to_terms_and_conditions">By tapping connect with,
        you agree with our
        <annotation id="0">Terms of Services</annotation> and
        <annotation id="1">Privacy Policy</annotation>
    </string>
    <string name="forgot_password">Forgot Password</string>
    <string name="dont_have_an_account">Don\'t have an account?<font color="#4FD44C"><b> Register</b></font>
       </string>
    <string name="login">Login</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_gender">Gender</string>
    <string name="label_dob">Date of Birth</string>
    <string name="hint_first_name">First Name</string>
    <string name="hint_last_name">Last Name</string>
    <string name="invalid_password">Your password should contain 6–15 characters</string>
    <string name="empty_email">Please enter your email.</string>
    <string name="empty_password">Please enter your password.</string>
    <string name="invalid_email">Email you have entered is not valid.</string>
    <string name="invalid_image">Please upload your image</string>
    <string name="invalid_gender">Please select your gender</string>
    <string name="invalid_dob">You must be at least 18 years or above in order to use the application</string>
    <string name="already_have_an_account">Already have an account?<font color="#4FD44C"><b> Sign in</b></font></string>
    <string name="select_country_code">Select Country Code</string>
    <string name="facebook_app_id">1483052455175915</string>
    <string name="fb_login_protocol_scheme">fb1483052455175915</string>
    <string name="dialog">dialog</string>
    <string name="ok">OK</string>
    <string name="action_okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="no_internet">Please check your internet connection.</string>
    <string name="retrofit_failure">There might be some problem please try again later.</string>
    <string name="hint_search">Search…</string>
    <string name="take_photo">Take Photo</string>
    <string name="choose_from_gallery">Choose From Gallery</string>
    <string name="session_expired">Your session is expired, please login again to continue.</string>
    <string name="storage_permission_needed">You need to grant read/write external
        storage permission in order to access media.
    </string>
    <string name="enable_storage_permission">You should enable your storage permission
        in the settings for better experience.
    </string>
    <string name="location_permission_needed">You need to grant location permission in order to use the app features.
    </string>
    <string name="enable_location_permission">You should enable your location permission
        in the settings for better experience.
    </string>
    <string name="enable_camera_permission">You should enable your camera permission
        in the settings for better experience.
    </string>
    <string name="reading_contacts_permission_required">You should enable read contacts
        permission to get recommendations from your phonebook contacts.
    </string>
    <string name="enable_read_contacts_permission">You should enable read contacts
        permission in the app settings.
    </string>
    <string name="processing_image">Processing Image…</string>
    <string name="share_via">Share via</string>
    <string name="accept_terms_and_privacy_policy">
        <![CDATA[Please accept Terms & Conditions and Privacy Policy]]></string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="home">Home</string>
    <string name="terms_and_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="about_us">About Us</string>
    <string name="st_forgot_password_description"><![CDATA[No worries!\n Enter your email & click on the recovery link sent to you to reset your password.]]></string>
    <string name="my_contact_number_is">My contact number is</string>
    <string name="enter_phone_number_description">We will send a text with a verification code. Message and data rates may apply.  An SMS OTP (one-time password) is a secure authorization method where a numeric code is sent to you mobile .</string>
    <string name="btn_continue">Continue</string>
    <string name="please_enter_verification_code">Please enter verification code</string>
    <string name="enter_top_description">We have sent a text with a verification code. Message and data rates may apply.  An SMS OTP (one-time password) is a secure authorization method where a numeric code is sent on your mobile .</string>
    <string name="didnot_get_otp">Didn\'t get your OTP? Resend?</string>
    <string name="confirm">Confirm</string>
    <string name="next">Next</string>
    <string name="can_we_get_your_name">Can we get your name?</string>
    <string name="can_we_get_your_dob">Can we get your date of birth?</string>
    <string name="select">Select</string>
    <string name="your_gender">Your gender?</string>
    <string name="gender_you_want_to_date">Gender you want to date?</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="both">Both</string>
    <string name="can_we_get_your_loc">Can we get your location?</string>
    <string name="use_my_current_location">Use my current location</string>
    <string name="want_to_see_notifications_from_us">Want to see notifications from us?</string>
    <string name="yes_i_am_in">Yes, I\'m in</string>
    <string name="no_i_am_good">No, I\'m good</string>
    <string name="set_up_your_profile">Set up your profile</string>
    <string name="country_name_code_placeholder">%1$s (%2$s)</string>
    <string name="chats">Chats</string>
    <string name="no_chat">No Chat</string>
    <string name="load_earlier_messages">Load Earlier Messages</string>
    <string name="type_message_text">Type your message…</string>
    <string name="matches">Matches</string>
    <string name="feeds">Feeds</string>
    <string name="profile">Profile</string>
    <string name="my_discovery_status">My Discovery Status</string>
    <string name="keep_me_visible">KEEP ME VISIBLE</string>
    <string name="dont_show">DON\'T SHOW</string>
    <string name="on">ON</string>
    <string name="off">OFF</string>
    <string name="push_notifications">Push Notifications</string>
    <string name="distance_unit">Distance Unit</string>
    <string name="km">KM</string>
    <string name="miles">MILES</string>
    <string name="other">Other</string>
    <string name="help_and_support"><![CDATA[Help & Support]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact">Contact</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="congrats_its_a_match">Congrats! it\'s a match.\nSophia liked you too.</string>
    <string name="keep_discovering">Keep Discovering</string>
    <string name="send_message">Send Message</string>
    <string name="discover_partner">Discover Partner</string>
    <string name="add_photos_text">Congrats! you are all done just add some profile pictures and we are ready to go.</string>
    <string name="at_least_2_photos_are_required">At least 2 photos required</string>
    <string name="add_image">Add Image</string>
    <string name="empty_country_code">Please select your country code.</string>
    <string name="empty_phone_number">Please enter your phone number</string>
    <string name="empty_otp">Please enter the otp</string>
    <string name="upload">Upload</string>
    <string name="invalid_number_of_photos">Please upload a minimum of 5 photos.</string>
    <string name="hint_caption">Caption</string>
    <string name="empty_first_name">Please enter your first name</string>
    <string name="empty_dob">Please select your date of birth</string>
    <string name="empty_location">Please select your location</string>
    <string name="meaning_of_name">Meaning of name</string>
    <string name="story_behind_name">Story behind your name</string>
    <string name="height">Height</string>
    <string name="ethnicity">Ethnicity</string>
    <string name="dob">Date of birth</string>
    <string name="name_age_placeholder">%1$s %2$s, %3$d</string>
    <string name="full_name_placeholder">%1$s %2$s</string>
    <string name="hint_name_meaning">Meaning of your name</string>
    <string name="hint_name_story">Any story behind your name?</string>
    <string name="your_ethnicity">Your ethnicity?</string>
    <string name="audio_db_title_format"><xliff:g id="format">yyyy-MM-dd HH:mm:ss</xliff:g></string>
    <string name="update">Update</string>
    <string name="update_basic_info">Update Basic Info</string>
    <string name="how_tall_are_you">How tall are you?</string>
    <string name="hint_height">Your height in ft &amp; inches</string>
    <string name="empty_name_meaning">Please enter meaning of your name</string>
    <string name="empty_name_story">Please enter the story behind your name</string>
    <string name="invalid_height">Please enter your height</string>
    <string name="invalid_ethnicity">Please select your ethnicity</string>
    <string name="high_school">High School</string>
    <string name="graduate">Graduate</string>
    <string name="post_graduate">Post Graduate</string>
    <string name="prefer_not_to_say">Prefer not to say</string>
    <string name="invalid_answer">Please enter/select the answer for the question</string>
    <string name="save">Save</string>
    <string name="discover">Discover</string>
    <string name="no_new_user_nearby">No new user nearby.</string>
    <string name="no_more_matches">No More Matches</string>
    <string name="no_match">No Match</string>
    <string name="matched_user_text">Congrats! its a match. %1$s %2$s liked you too</string>
    <string name="age">Age</string>
    <string name="some_college">Some College</string>
    <string name="bachelors">Bachelors</string>
    <string name="distance">Distance</string>
    <string name="interested_in">I am interested in</string>
    <string name="filter_max_range_placeholder">%1$d-%2$d+</string>
    <string name="filter_range_placeholder">%1$d-%2$d</string>
    <string name="st_sign_in_to_your_account">Sign in to your\naccount</string>
    <string name="st_enter_your_login_credentials">Enter your login credentials</string>
    <string name="st_forgot_password">Forgot Password?</string>
    <string name="st_sign_in">Sign In</string>
    <string name="st_sign_up_to_create_account">Sign up to create\naccount</string>
    <string name="st_enter_your_sign_up_credentials">Enter your sign up credentials</string>
    <string name="st_confirm_password">Confirm password</string>
    <string name="sign_up">Sign Up</string>
    <string name="st_job_title">Job Title</string>
    <string name="st_job_address">Job Address</string>
    <string name="st_job_state">State</string>
    <string name="st_city">City</string>
    <string name="st_start_date">Start Date</string>
    <string name="st_end_date">End Date</string>
    <string name="st_add_members">Add Members</string>
    <string name="st_search">Search...</string>
    <string name="st_invite_new_members">Invite New Members</string>
    <string name="st_edit_members">Edit Members</string>
    <string name="st_job_edit">Job Edit</string>
    <string name="st_map">Map</string>
    <string name="st_save_job">Save Job</string>
</resources>