<?xml version="1.0" encoding="utf-8"?>
<com.max360group.cammax360.views.utils.SlidingConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background_img">


    <ImageView
        android:id="@+id/ivHeaderView"
        android:layout_width="@dimen/auth_logo_width"
        android:layout_height="@dimen/default_button_height"
        android:layout_marginTop="@dimen/header_top_margin"
        android:src="@drawable/ic_cam_max_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSignInLabel"
        style="@style/StyleBold"
        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/header_top_margin"
        android:lineSpacingExtra="@dimen/line_spacing_extra"
        android:text="@string/st_sign_in_to_your_account"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivHeaderView" />

    <TextView
        android:id="@+id/tvCredentialLabel"
        style="@style/StyleMedium"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/fragment_default_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:lineSpacingExtra="@dimen/line_spacing_extra"
        android:text="@string/st_enter_your_login_credentials"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvSignInLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvSignInLabel" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/StyleInputEditText"
        android:layout_marginTop="@dimen/header_top_margin"
        android:hint="@string/label_email"
        android:singleLine="true"
        android:inputType="textEmailAddress"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvCredentialLabel"
        app:layout_constraintStart_toStartOf="@+id/tvCredentialLabel"
        app:layout_constraintTop_toBottomOf="@+id/tvCredentialLabel" />

    <EditText
        android:id="@+id/etPassword"
        style="@style/StyleInputEditText"
        android:layout_marginTop="@dimen/fragment_default_margin"
        android:hint="@string/label_password"
        android:singleLine="true"
        android:inputType="textPassword"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/tvCredentialLabel"
        app:layout_constraintStart_toStartOf="@+id/tvCredentialLabel"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <TextView
        android:id="@+id/tvForgotPassword"
        style="@style/StyleMedium"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/fragment_medium_margin"
        android:lineSpacingExtra="@dimen/line_spacing_extra"
        android:text="@string/st_forgot_password"
        android:padding="@dimen/fragment_small_margin"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintTop_toBottomOf="@+id/etPassword" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        style="@style/StyleSubmitButton"
        android:layout_marginBottom="@dimen/fragment_default_margin"
        android:text="@string/st_sign_in"
        app:layout_constraintBottom_toTopOf="@+id/tvDontHaveAccount"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword" />


    <TextView
        android:id="@+id/tvDontHaveAccount"
        style="@style/StyleSemiBold"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/dont_have_an_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/etPassword"
        app:layout_constraintStart_toStartOf="@+id/etPassword" />


</com.max360group.cammax360.views.utils.SlidingConstraintLayout>